# universal-d

./: README-zh_CN.md  README.md  postgresql.yml
backend/: Makefile  README.md  pyproject.toml
backend/apps/: admin.py
backend/apps/management/commands/: initdb.py
backend/back/: settings.py
